--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <h1 class="branco">Quer Conhecer um Método que Aumenta em Até 97.4% Sua Chance de Acertar 14 Pontos?</h1>
             <br>
             <br>
-            <a class="btn btn-lg btn-success" href="https://noticiadodia.github.io/questionario2/">SIM</a>&nbsp;
-            <a class="btn btn-danger btn-lg" href="https://noticiadodia.github.io/questionario2/">NÃO</a>
+            <a class="btn btn-lg btn-success" href="https://apps-inovadores.github.io/sniper-app/">SIM</a>&nbsp;
+            <a class="btn btn-danger btn-lg" href="https://apps-inovadores.github.io/sniper-app/">NÃO</a>
           </div>
         </div>
       </div>
